--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ MYRAG_CHROMADB_PORT=8000
 MYRAG_MODEL=mistral
 
 MYRAG_OLLAMA_URL=http://localhost:11434
+
+MYRAG_APP_TITLE=MyRAG
+MYRAG_APP_SUBTITLE=Ask me anything!
+
